k8s/traefik/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: nginx-web
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: nginx-web
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: nginx-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`queth.preempt.robinbryce.me`) && PathPrefix(`/static`)
      kind: Rule
      services:
        - name: nginx-web
          port: 80
  tls:
    certResolver: letsencrypt
    #domains:
    #  - main: "*.robinbryce.me"
    #    #sans: "*.robinbryce.me"
    #
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`queth.preempt.robinbryce.me`) && PathPrefix(`/adder`)
      kind: Rule
      services:
        - name: adder-http1
          port: 8081
  tls:
    certResolver: letsencrypt
